Updated testapp build

--- a/TestApp/TestApp.gradle
+++ b/TestApp/TestApp.gradle
@@ -29,7 +29,7 @@ task dockerBuildPitchImage(type: DockerBuildImage) {
     dockerFile = project.file('Dockerfile-pi')
     buildArgs.put('version', "${designatorVersion}")
 	inputDir = file('.')
-    tags.add ("ivct/testapp:pi-skeleton-${designatorVersion}")
+    tags.add ("ivct/ts-designator:testapp-pi-skeleton-${designatorVersion}")
 }
 
 task dockerBuildPorticoImage(type: DockerBuildImage) {
@@ -39,7 +39,7 @@ task dockerBuildPorticoImage(type: DockerBuildImage) {
     dockerFile = project.file('Dockerfile-po')
     buildArgs.put('version', "${designatorVersion}")
 	inputDir = file('.')
-    tags.add ("ivct/testapp:po-${designatorVersion}")
+    tags.add ("ivct/ts-designator:testapp-po-${designatorVersion}")
 }
 
 task dockerBuildMakImage(type: DockerBuildImage) {
@@ -49,7 +49,7 @@ task dockerBuildMakImage(type: DockerBuildImage) {
     dockerFile = project.file('Dockerfile-ma')
     buildArgs.put('version', "${designatorVersion}")
 	inputDir = file('.')
-    tags.add ("ivct/testapp:ma-${designatorVersion}")
+    tags.add ("ivct/ts-designator:testapp-ma-${designatorVersion}")
 }
 
 tasks.register ("dockerBuildImage") {
