replace deprectated maven plugin

--- a/.shared/commons.gradle
+++ b/.shared/commons.gradle
@@ -75,7 +75,7 @@ subprojects { subProject ->
 		}
 
 
-        apply plugin: 'maven' // for install task as well as deploy dependencies
+        apply plugin: 'maven-publish' // for install task as well as deploy dependencies
 
 
 
