--- a/.shared/libraries.gradle
+++ b/.shared/libraries.gradle
@@ -19,7 +19,7 @@ ext {
 	logbackVersion = '1.1.3'
 	slf4jVersion = '1.7.10'
     jsonSimpleVersion = '1.1.1'
-    gradleDockerPluginVersion = '4.9.0'
+    jibPluginVersion = '3.1.2'
 
 	// ~~~~~~~~~~~~~~~~~~~~~~~~~~  now create libraries with the versions from above
 	libraries = [
@@ -37,7 +37,5 @@ ext {
         oorti:                          files('TS_Designator/src/main/resources/oorti-1.4.jar'),
         // ~~~~~~~~~~~~~~~~~~~~~~~~~~ testing
         junit_jupiter_engine:           "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}",
-        // ~~~~~~~~~~~~~~~~~~~~~~~~~~ Docker
-        docker:	                        "com.bmuschko:gradle-docker-plugin:${gradleDockerPluginVersion}"
     ]
 }
