--- a/TestApp/TestApp.gradle
+++ b/TestApp/TestApp.gradle
@@ -2,7 +2,7 @@ plugins {
     // using the Java core Application plugin
     id 'application'
     // JIB Container Support for Java applications
-    id 'com.google.cloud.tools.jib' version '3.1.2'
+    id 'com.google.cloud.tools.jib' version "${jibPluginVersion}"
 }
 
 
