adopt to changes in tc-lib-if

--- a/TS_Designator/TS_Designator.gradle
+++ b/TS_Designator/TS_Designator.gradle
@@ -57,8 +57,8 @@ dependencies {
 	compileOnly		libraries.jsonSimple
 
     testImplementation  libraries.tc_lib
-    testImplementation  "io.github.ivctool:Command:${ivctVersion}"
     testImplementation  libraries.oorti
+	testImplementation  files("$System.env.LRC_CLASSPATH")
 
     testImplementation	libraries.junit_jupiter_engine
 }
